--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
           <div class="card-description">
             <h2>Weather App</h2>
             <p class="white-description">
-              This is a responsive weather app made with JavaScript that displays the temperature, humidity and timezone for cities around the world.
+              This is a responsive weather app made with JavaScript that
+              displays the temperature, humidity and timezone for cities around
+              the world.
             </p>
             <ul class="project-stacks card-stacks">
               <li>HTML</li>
@@ -216,7 +218,6 @@
             >
           </div>
         </div>
-        
       </div>
       <div class="about-me">
         <section class="about-me-section">
@@ -288,6 +289,9 @@
             </li>
           </ul>
         </div>
+      </div>
+      <div id="contact-me">
+        <h2>Contact Me</h2>
       </div>
     </main>
 
