Edit social icons on contact form

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           </ul>
         </div>
       </div>
-      < id="contact-me">
+      <div id="contact-me">
         <h2>
           I'm always interested in hearing about new projects, so if you'd like
           to chat please get in touch.
@@ -305,68 +305,68 @@
           ></textarea>
           <button type="submit">Get in touch</button>
         </form>
-          <div class="social">
-            <a
-              class="social-link"
-              href="https://github.com/SpaYco"
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <img
-                class="social-icon footer-social-icons"
-                src="./media/svg/github.svg"
-                alt="GitHub Icon"
-              />
-            </a>
-            <a
-              class="social-link"
-              href="https://www.linkedin.com/in/spayco"
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <img
-                class="social-icon footer-social-icons"
-                src="./media/svg/linkedin.svg"
-                alt="LinkedIn Icon"
-              />
-            </a>
-            <a
-              class="social-link"
-              href="https://angel.co/spayco"
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <img
-                class="social-icon footer-social-icons"
-                src="./media/svg/angel.svg"
-                alt="AngelList Icon"
-              />
-            </a>
-            <a
-              class="social-link"
-              href="https://twitter.com/iSpaYco"
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <img
-                class="social-icon footer-social-icons"
-                src="./media/svg/twitter.svg"
-                alt="Twitter Icon"
-              />
-            </a>
-            <a
-              class="social-link"
-              href="https://spayco.medium.com/"
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <img
-                class="social-icon footer-social-icons"
-                src="./media/svg/medium.svg"
-                alt="Medium Icon"
-              />
-            </a>
-          </div>
+      </div>
+      <div class="social">
+        <a
+          class="social-link"
+          href="https://github.com/SpaYco"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          <img
+            class="social-icon footer-social-icons"
+            src="./media/svg/github.svg"
+            alt="GitHub Icon"
+          />
+        </a>
+        <a
+          class="social-link"
+          href="https://www.linkedin.com/in/spayco"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          <img
+            class="social-icon footer-social-icons"
+            src="./media/svg/linkedin.svg"
+            alt="LinkedIn Icon"
+          />
+        </a>
+        <a
+          class="social-link"
+          href="https://angel.co/spayco"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          <img
+            class="social-icon footer-social-icons"
+            src="./media/svg/angel.svg"
+            alt="AngelList Icon"
+          />
+        </a>
+        <a
+          class="social-link"
+          href="https://twitter.com/iSpaYco"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          <img
+            class="social-icon footer-social-icons"
+            src="./media/svg/twitter.svg"
+            alt="Twitter Icon"
+          />
+        </a>
+        <a
+          class="social-link"
+          href="https://spayco.medium.com/"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          <img
+            class="social-icon footer-social-icons"
+            src="./media/svg/medium.svg"
+            alt="Medium Icon"
+          />
+        </a>
       </div>
     </main>
 
