Add styles for contact form

--- a/index.html
+++ b/index.html
@@ -306,67 +306,69 @@
           <button type="submit">Get in touch</button>
         </form>
       </div>
-      <div class="social">
-        <a
-          class="social-link"
-          href="https://github.com/SpaYco"
-          target="_blank"
-          rel="noreferrer noopener"
-        >
-          <img
-            class="social-icon footer-social-icons"
-            src="./media/svg/github.svg"
-            alt="GitHub Icon"
-          />
-        </a>
-        <a
-          class="social-link"
-          href="https://www.linkedin.com/in/spayco"
-          target="_blank"
-          rel="noreferrer noopener"
-        >
-          <img
-            class="social-icon footer-social-icons"
-            src="./media/svg/linkedin.svg"
-            alt="LinkedIn Icon"
-          />
-        </a>
-        <a
-          class="social-link"
-          href="https://angel.co/spayco"
-          target="_blank"
-          rel="noreferrer noopener"
-        >
-          <img
-            class="social-icon footer-social-icons"
-            src="./media/svg/angel.svg"
-            alt="AngelList Icon"
-          />
-        </a>
-        <a
-          class="social-link"
-          href="https://twitter.com/iSpaYco"
-          target="_blank"
-          rel="noreferrer noopener"
-        >
-          <img
-            class="social-icon footer-social-icons"
-            src="./media/svg/twitter.svg"
-            alt="Twitter Icon"
-          />
-        </a>
-        <a
-          class="social-link"
-          href="https://spayco.medium.com/"
-          target="_blank"
-          rel="noreferrer noopener"
-        >
-          <img
-            class="social-icon footer-social-icons"
-            src="./media/svg/medium.svg"
-            alt="Medium Icon"
-          />
-        </a>
+      <div class="social contact-social">
+        <div>
+          <a
+            class="social-link"
+            href="https://github.com/SpaYco"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
+            <img
+              class="social-icon footer-social-icons"
+              src="./media/svg/github.svg"
+              alt="GitHub Icon"
+            />
+          </a>
+          <a
+            class="social-link"
+            href="https://www.linkedin.com/in/spayco"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
+            <img
+              class="social-icon footer-social-icons"
+              src="./media/svg/linkedin.svg"
+              alt="LinkedIn Icon"
+            />
+          </a>
+          <a
+            class="social-link"
+            href="https://angel.co/spayco"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
+            <img
+              class="social-icon footer-social-icons"
+              src="./media/svg/angel.svg"
+              alt="AngelList Icon"
+            />
+          </a>
+          <a
+            class="social-link"
+            href="https://twitter.com/iSpaYco"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
+            <img
+              class="social-icon footer-social-icons"
+              src="./media/svg/twitter.svg"
+              alt="Twitter Icon"
+            />
+          </a>
+          <a
+            class="social-link"
+            href="https://spayco.medium.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
+            <img
+              class="social-icon footer-social-icons"
+              src="./media/svg/medium.svg"
+              alt="Medium Icon"
+            />
+          </a>
+        </div>
       </div>
     </main>
 
