remove placeholder for email

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         </h2>
         <form>
           <input type="text" placeholder="Full name" />
-          <input type="email" placeholder="Email address" />
+          <input type="email" />
           <textarea
             cols="30"
             rows="10"
