Add placeholders and maxlength on name input

--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
           to chat please get in touch.
         </h2>
         <form>
-          <input type="text" placeholder="Full name" />
-          <input type="email" />
+          <input type="text" placeholder="Full name" maxlength="30" />
+          <input type="text" placeholder="Email address" />
           <textarea
             cols="30"
             rows="10"
