--- a/index.html
+++ b/index.html
@@ -295,10 +295,16 @@
           I'm always interested in hearing about new projects, so if you'd like
           to chat please get in touch.
         </h2>
-        <form>
-          <input type="text" placeholder="Full name" maxlength="30" />
-          <input type="text" placeholder="Email address" />
+        <form action="https://formspree.io/f/mrgrnekq" method="POST">
+          <input
+            name="user_name"
+            type="text"
+            placeholder="Full name"
+            maxlength="30"
+          />
+          <input name="user_email" type="text" placeholder="Email address" />
           <textarea
+            name="message"
             cols="30"
             rows="10"
             placeholder="Enter message here"
