--- a/index.html
+++ b/index.html
@@ -301,13 +301,20 @@
             type="text"
             placeholder="Full name"
             maxlength="30"
+            required
           />
-          <input name="user_email" type="text" placeholder="Email address" />
+          <input
+            name="user_email"
+            type="email"
+            placeholder="Email address"
+            required
+          />
           <textarea
             name="message"
             cols="30"
             rows="10"
             placeholder="Enter message here"
+            required
           ></textarea>
           <button type="submit">Get in touch</button>
         </form>
